--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	maxLevel: 4,
     subMaxLevel: 2,
 	ga: 'UA-104097150-2',
-	codesponsor: 'yOGd6xxviWe8SBQ0t-FSSg',
+	//codesponsor: 'yOGd6xxviWe8SBQ0t-FSSg',
 	search: {
       noData: {
         '/': 'Keine Ergebnisse!',
@@ -48,7 +48,7 @@
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
-<script src="//unpkg.com/docsify/lib/plugins/codesponsor.min.js"></script>
+<!--<script src="//unpkg.com/docsify/lib/plugins/codesponsor.min.js"></script>-->
 <script src="//unpkg.com/docsify/lib/plugins/ga.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/emoji.min.js"></script>
 <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
